fix notification icon alignment

--- a/todo-front/src/shared/styles/index.css
+++ b/todo-front/src/shared/styles/index.css
@@ -297,6 +297,9 @@ svg {
     color: var(--text-2);
     transition: 0.16s;
 }
+.icon-btn {
+    position: relative;
+}
 .icon-btn:hover {
     background: var(--surface-2);
     color: var(--text);
@@ -304,6 +307,17 @@ svg {
 .icon-btn svg {
     width: 19px;
     height: 19px;
+}
+.icon-btn span {
+    position: absolute;
+    top: 11px;
+    right: 12px;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background: var(--gold);
+    box-shadow: 0 0 0 2px var(--surface);
+    pointer-events: none;
 }
 .avatar-btn img {
     width: 32px;
